fix review issues